<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@mipmap/ic_launcher" />

        <com.arkaccountslite.widget.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_normal"
            app:font="@string/font_regular" />
    </LinearLayout>


    <com.arkaccountslite.widget.CustomTextView
        android:id="@+id/txt_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/all_rights"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_normal"
        app:font="@string/font_regular" />


</RelativeLayout>