<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <com.arkaccountslite.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/change_language"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_normal"
                app:font="@string/font_regular" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.arkaccountslite.widget.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="English"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_normal"
                    app:font="@string/font_bold" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="0.5dp"
                    android:background="@android:color/black" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <com.arkaccountslite.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/due_days"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_normal"
                app:font="@string/font_regular" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.arkaccountslite.widget.CustomEditText
                    android:id="@+id/edit_duedays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="30"
                    android:background="@null"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_normal"
                    app:font="@string/font_bold" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="0.5dp"
                    android:background="@android:color/black" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_push_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/receive_push_notifications"
            android:textSize="@dimen/font_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/allow_reminders"
            android:textSize="@dimen/font_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color" />

        <com.arkaccountslite.widget.CustomTextView
            android:id="@+id/txt_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/Logout"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_normal"
            app:font="@string/font_regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color" />
    </LinearLayout>
</LinearLayout>