<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.arkaccountslite.widget.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="42dp"
        android:text="@string/signup_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_heading"
        app:font="@string/font_bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/purchase_medium_gray">

            <com.arkaccountslite.widget.CustomEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Name"
                android:singleLine="true"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/font_size_normal"
                app:font="@string/font_regular" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_contact_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.2"
                android:textColorHint="@color/purchase_medium_gray">

                <com.arkaccountslite.widget.CustomEditText
                    android:id="@+id/edit_contact_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint=" +91"
                    android:drawableLeft="@drawable/ic_phone"
                    android:singleLine="true"
                    android:textColorHint="@color/light_gray"
                    android:textSize="@dimen/font_size_normal"
                    app:font="@string/font_regular" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_contact_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.8"
                android:textColorHint="@color/purchase_medium_gray">

                <com.arkaccountslite.widget.CustomEditText
                    android:id="@+id/edit_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Contact Number"
                    android:singleLine="true"
                    android:textColorHint="@color/light_gray"
                    android:textSize="@dimen/font_size_normal"
                    app:font="@string/font_regular" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/purchase_medium_gray">

            <com.arkaccountslite.widget.CustomEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/font_size_normal"
                app:font="@string/font_regular" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_confirm_passwrod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/purchase_medium_gray">

            <com.arkaccountslite.widget.CustomEditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/font_size_normal"
                app:font="@string/font_regular" />
        </android.support.design.widget.TextInputLayout>


        <com.arkaccountslite.widget.CustomButton
            android:id="@+id/btn_signup"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_round_corner"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:button_font="@string/font_bold" />

        <com.arkaccountslite.widget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="OR"
            android:textColor="@android:color/black"
            android:textAllCaps="false"
            android:textSize="@dimen/font_size_normal"
            app:font="@string/font_regular" />

        <com.arkaccountslite.widget.CustomButton
            android:id="@+id/btn_already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_round_corner"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/already_have_account"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            app:button_font="@string/font_bold" />


    </LinearLayout>


</LinearLayout>